# smart_basket_backend

./: main.py  pyproject.toml  test.db  test_iot_backend.db  test_order.db  test_product.db
api/: order_route.py  payment_route.py
app/api/: product_route.py
app/database/: base.py  connection.py
app/models/: product.py
app/services/: product_service.py
app/test/: conftest.py  test_order.py  test_payment.py  test_product.py
database/: base.py
models/: order.py  payment.py  product.py
schemas/: order_schema.py  payment_schema.py  product_schema.py
services/: order_service.py  payment_service.py  product_service.py
