[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.137.0",
    "httpx>=0.28.1",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "python-dotenv>=1.2.2",
    "qrcode>=8.2",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
]
